# myproject

./: CMakeLists.txt  app.overlay  myprojectcppcheck.cppcheck  prj.conf  test_runner_vsc.c
.reasonix/skills/: code-review.md  doc-annotate.md  embedded-design.md  test.md
.reasonix/truncated-results/: 1780816391546-4c2510c0-run_command.txt  1780822748717-178c4584-run_command.txt
.trae/rules/: git-commit-message.md
docs/: ISC-v2.3-Final.md  VSC-API-Reference.md  VSC-Development-Standards.md  VSC-Integration-Guide.md  VSC-System-Architecture.md  VSC-Testing-Strategy.md
docs/notes/: vsc-architecture-review.md  vsc-p1-property-schema-design.md  vsc-property-resolver-design.md  vsc-resolver-submodules.md  vsc-schema-compiler-contract.md
docs/ref/: README.md
drivers/: board.json  registry.yaml  system_graph.json
drivers/analyzer/: histogram.schema.yaml
drivers/fpga/: binning.schema.yaml  crop.schema.yaml  decoder.schema.yaml
drivers/sensor/: sensor_imx477.schema.yaml
src/: main.c
src/app/: main.c
src/app/init/: init_thread.c  param_manager_init.c  sys_param.c
src/bsp/rp2350/: fal_flash_rp2350.c
src/camera/board/: vsc_lite_board.h  vsc_lite_board_default.c
src/camera/core/isc/: example_app.c  isc_control.h  isc_internal.h
src/camera/core/isc/core/: isc.h  isc_config.h  isc_control.h  isc_core.c  isc_internal.h  isc_port.h  isc_sensor_ops.h
src/camera/core/isc/port/: isc_port_axi.c  isc_port_common.c  isc_port_common.h  isc_port_i2c.c  isc_port_spi.c
src/camera/core/vsc/: vsc_driver_registry.c  vsc_feature.c  vsc_loader.c  vsc_resolver.c  vsc_types.h
src/camera/core/vsc_lite/: vsc_core_types.h  vsc_ctrl_ids.h  vsc_driver_ids.h  vsc_lite.c  vsc_lite.h
src/camera/drivers/bridge/: isc_bridge.c  isc_bridge.h  sensor_imx296_vsc.c  sensor_imx296_vsc.h  sensor_module.c  sensor_vsc.c  sensor_vsc.h
src/camera/drivers/ip/binning/: binning_driver.h  binning_vsc.c  binning_vsc.h
src/camera/drivers/ip/crop/: crop_vsc.c  crop_vsc.h
src/camera/drivers/sensors/: isc_sensor_gsense.c  isc_sensor_imx296.c  isc_sensor_imx477.c  isc_sensor_smartsens.c
src/camera/modules/auto_exp/: ae_instance.c  ae_instance.h
src/camera/modules/vsc_lite/: vsc_lite_control.c  vsc_lite_control.h
src/core/file_process/: file_io_flash.c  file_io_flash.h  file_io_fs.c  file_io_fs.h  file_io_lfs.c  file_io_lfs.h  file_io_policy.h  file_processing.c  file_processing.h
src/core/isc/: example_app.c  isc.h  isc_config.h  isc_control.h  isc_core.c  isc_internal.h  isc_port.h  isc_sensor_ops.h
src/core/isc/sensors/: imx477.c  isc_sensor_gsense.c  isc_sensor_imx296.c  isc_sensor_imx477.c  isc_sensor_smartsens.c  isc_sensor_sony.c
src/core/param_manager/config/: module_ids.h  param_manager_config.h
src/core/param_manager/core/: app_param_manager.c  app_param_manager.h  ip_param_manager.c  ip_param_manager.h  module_ids.h  param_data_ops.c  param_data_ops.h  param_dump.c  param_dump.h  param_manager.c  param_manager.h  param_manager_config.h  param_manager_internal.h
src/core/param_manager/port/: param_event_lwevt.h  param_manager_port.c  param_manager_port.h  param_storage_flashdb.c  param_storage_flashdb.h  param_storage_iniparser.c  param_storage_iniparser.h
src/core/param_manager/storage/: param_event_lwevt.h  param_storage_flashdb.c  param_storage_flashdb.h  param_storage_mkv.c  param_storage_mkv.h
src/core/protocol_parser/: protocol_chain.c  protocol_chain.h  protocol_parser.c  protocol_parser.h  protocol_parser_internal.h  system_adapter.h
src/init/: app_config.h  file_storage_init.c  file_storage_init.h  init_thread.h  param_manager_init.c  param_manager_init.h  protocol_chain_init.c  protocol_chain_init.h  protocol_parser_thread.c  protocol_parser_thread.h  sys_param.c
src/lib/flashdb/config/: fal_cfg.h  fdb_cfg.h
src/lib/lwevt/user_config/: lwevt_opts.h  lwevt_types.h
src/lib/mkv/: mkv.c  mkv.h
src/modules/app/auto_exp/: auto_exp_control.c  auto_exp_control.h
src/modules/ip/binning/: binning_driver.c  binning_vsc.c  binning_vsc.h
src/modules/ip/crop/: crop_driver.c  crop_driver.h  crop_vsc.c
src/modules/ip/decoder/: decoder_driver.c  decoder_vsc.h
src/modules/ip/histogram/: histogram_driver.h  histogram_vsc.h
src/modules/ip/sensor/: sensor_module.c  sensor_module.h
src/modules/sensor/: isc_bridge.c  sensor_vsc.c  sensor_vsc.h
src/platform/: port.h
src/platform/port/: port.h  port_impl.c
src/port/: port_impl.c
src/protocols/camyu/: protocol_parser_camyu.c  protocol_parser_camyu.h
src/protocols/imperx/: imperx_cmd_map.c  imperx_cmd_map.h  protocol_parser_imperx.c  protocol_parser_imperx.h
src/protocols/ymodem/adapter/: protocol_parser_ymodem.c  protocol_parser_ymodem.h
src/protocols/ymodem/src/: ymodem_common.c  ymodem_common.h  ymodem_receiver.c  ymodem_receiver.h  ymodem_sender.c  ymodem_sender.h
src/test/camera/vsc/: test_vsc_lite.c  test_vsc_resolver.c
src/test/core/: test_suite.c  test_suite.h  unified_test_main.c
src/test/core/param_manager/: test_error_handling.c  test_init_order.c  test_load_save.c  test_main.c  test_multi_bank.c  test_other.c
src/test/core/protocol_chain/: test_chain.c
src/test/imperx/: test_imperx.c
src/test/param_manager/: test_boundary.c  test_common.c  test_common.h  test_error_handling.c  test_flush.c  test_init_order.c  test_load_save.c  test_main.c  test_multi_bank.c  test_other.c  test_read_write.c  test_reset.c
src/test/protocols/camyu/: test_camyu.c
src/test/vsc/: test_vsc_resolver.c
src/test/ymodem/mocks/: mock_time.c
src/test/ymodem/unit/: test_common.c  test_receiver.c  test_sender.c
src/vsc/: vsc_driver_registry.c  vsc_driver_registry.h  vsc_feature.c  vsc_feature.h  vsc_loader.c  vsc_loader.h  vsc_resolver.c  vsc_resolver.h  vsc_types.h
test/camera/isc/: test_isc.c  test_isc_common.c  test_isc_common.h  test_isc_control.c  test_isc_format.c  test_isc_lifecycle.c
tools/: check_graph_types.py  ci_check_vsc_gen.py  vivado_export_graph.tcl  vsc_prop_gen.py
tools/vsc_compiler/: __init__.py  ast_nodes.py  checker.py  checksum.py  codegen.py  depgraph.py  parser.py
(+14 files in other folders)
