cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(my_project)

target_include_directories(app PRIVATE
     src
     src/app/init
    src/test/core/unity
    src/test/core/param_manager
    src/camera/core/vsc
    src/camera/core/vsc_lite
    src/camera/board
    src/camera/modules/vsc_lite
    gen/vsc
    src/test/protocols/camyu
    src/core/protocol_parser
    src/platform
    src/platform/port
    src/core/param_manager/core
    src/core/param_manager/config
    src/core/param_manager/storage
    src/protocols/ymodem/src
    src/protocols/ymodem/adapter
    src/protocols/imperx
    src/protocols/camyu
    src/core/file_process
    src/lib/flashdb/inc
    src/lib/mkv
    src/lib/flashdb/port/fal/inc
    src/lib/flashdb/config
    src/lib/lwevt/src/include
    src/lib/lwevt/user_config
    src/platform/bsp/rp2350
    src/camera/modules/auto_exp
    src/camera/core/isc/core
    src/camera/core/isc/port
    src/camera/drivers/sensors
    src/camera/drivers/bridge
    src/camera/drivers/ip/binning
    src/camera/drivers/ip/crop
    src/camera/drivers/ip/decoder
    src/camera/drivers/ip/histogram
)

target_compile_definitions(app PRIVATE USE_FLASHDB)

target_sources(app PRIVATE
      src/app/main.c
      src/app/init/init_thread.c
      src/app/init/protocol_chain_init.c
      src/app/init/param_manager_init.c
      src/app/init/sys_param.c
      src/app/init/file_storage_init.c
      src/app/init/protocol_parser_thread.c
      src/core/protocol_parser/protocol_chain.c
      src/core/protocol_parser/protocol_parser.c
      src/core/param_manager/core/param_manager.c
      src/core/param_manager/core/app_param_manager.c
      src/core/param_manager/core/ip_param_manager.c
      src/core/param_manager/core/param_data_ops.c
      src/core/param_manager/core/param_dump.c
      src/platform/port/port_impl.c
      src/core/param_manager/storage/param_storage_flashdb.c
      src/core/param_manager/storage/param_storage_mkv.c
      src/lib/mkv/mkv.c
      src/platform/bsp/rp2350/fal_flash_rp2350.c
      src/protocols/camyu/protocol_parser_camyu.c
      src/protocols/imperx/protocol_parser_imperx.c
      src/protocols/imperx/imperx_cmd_map.c
      src/protocols/ymodem/adapter/protocol_parser_ymodem.c
      src/protocols/ymodem/src/ymodem_common.c
      src/protocols/ymodem/src/ymodem_receiver.c
      src/protocols/ymodem/src/ymodem_sender.c
      src/core/file_process/file_processing.c
      src/core/file_process/file_io_fs.c
      src/core/file_process/file_io_flash.c
      src/lib/flashdb/src/fdb.c
      src/lib/flashdb/src/fdb_kvdb.c
      src/lib/flashdb/src/fdb_utils.c
      src/lib/flashdb/port/fal/src/fal.c
      src/lib/flashdb/port/fal/src/fal_flash.c
      src/lib/flashdb/port/fal/src/fal_partition.c
      src/lib/lwevt/src/lwevt/lwevt.c
      src/camera/modules/auto_exp/ae_instance.c
      src/camera/modules/auto_exp/auto_exp_control.c
      src/camera/drivers/bridge/sensor_module.c
      src/camera/core/isc/example_app.c
      src/camera/core/isc/core/isc_core.c
      src/camera/core/isc/port/isc_port_common.c
      src/camera/core/isc/port/isc_port_i2c.c
      src/camera/drivers/sensors/isc_sensor_imx296.c
      src/camera/core/vsc_lite/vsc_lite.c
      src/camera/board/vsc_lite_board_default.c
      src/camera/modules/vsc_lite/vsc_lite_control.c
      src/camera/drivers/bridge/sensor_vsc.c
      src/camera/drivers/bridge/sensor_imx296_vsc.c
      src/camera/drivers/bridge/isc_bridge.c
      src/camera/drivers/ip/crop/crop_vsc.c
      src/camera/drivers/ip/crop/crop_driver.c
      src/camera/drivers/ip/binning/binning_vsc.c
      src/camera/drivers/ip/binning/binning_driver.c
      src/camera/drivers/ip/decoder/decoder_vsc.c
      src/camera/drivers/ip/decoder/decoder_driver.c
      src/camera/drivers/ip/histogram/histogram_vsc.c
      src/camera/drivers/ip/histogram/histogram_driver.c
      src/camera/drivers/sensors/isc_sensor_imx477.c
  )
